# feature

./: .gitignore  Cargo.toml  Justfile  README.md  dprint.jsonc  feature-config.schema.json  pre-commit.sh
.github/workflows/: release.yml
docs/: commands.md  config.md
src/: cli.rs  cli_error.rs  commands.rs  config.rs  main.rs
src/cli/: base.rs  check.rs  commit.rs  config.rs  config_cmd.rs  config_command.rs  db_cmd.rs  def.rs  diff.rs  error.rs  errors.rs  graph.rs  list.rs  log.rs  mod.rs  prune.rs  push.rs  show.rs  start.rs  status.rs  sync.rs  update.rs
src/config/: advice.rs  errors.rs  format.rs  list.rs  mod.rs  show.rs  status.rs  sync.rs
src/data/: mod.rs
src/database/: mod.rs
src/templater/: mod.rs
src/util/: advice.rs  branch.rs  branch_meta.rs  diff.rs  display.rs  lossy.rs  mod.rs  term.rs
tests/: base.rs  commit.rs  fixtures.rs  global.rs  graph.rs  log.rs  mod.rs  prune.rs  push.rs  start.rs  sync.rs  update.rs
tests/common/: gitconfig  mod.rs
