[package]
name = "feature"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
console = "0.16.2"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["serde_derive"] }
toml = "1.0.3"
toml_edit = "0.25.3"
unicode-width = "0.2.2"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3.25.0"
